2009-12-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Xan Lopez.

        [GTK] New events (pageshow and pagehide) tests failing
        https://bugs.webkit.org/show_bug.cgi?id=28823

        Original patch by Jan Michael Alonzo.

        Disable page cache for tests.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (copyWebSettingKey):
        (LayoutTestController::overridePreference):

2009-12-18  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by David Levin.

        Check one space before end of line comments.
        https://bugs.webkit.org/show_bug.cgi?id=32597
        
        Fix to check one space before end of line comments in whitespace and build/header_guard.
        Also fix build/header_guard to use WebKit header guard defines.

        * Scripts/modules/cpp_style.py:
        * Scripts/modules/cpp_style_unittest.py:

2009-12-17  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Add BUILDING_ON_SNOW_LEOPARD #define.

        * DumpRenderTree/mac/DumpRenderTreeMac.h:

2009-12-17  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Alexey Proskuryakov.

        Update pywebsocket to 0.4.5 and make handshake checking stricter
        https://bugs.webkit.org/show_bug.cgi?id=32249

        * Scripts/run-webkit-tests:
        * pywebsocket/mod_pywebsocket/handshake.py:
        * pywebsocket/mod_pywebsocket/memorizingfile.py: Added.
        * pywebsocket/mod_pywebsocket/standalone.py:
        * pywebsocket/setup.py:
        * pywebsocket/test/test_handshake.py:
        * pywebsocket/test/test_memorizingfile.py: Added.

2009-12-17  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Command.show_in_main_help should default to False
        https://bugs.webkit.org/show_bug.cgi?id=32686

        * Scripts/modules/commands/download.py: