@@ -1,3 +1,12 @@
+2009-12-18  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by David Levin.
+
+        move bugzilla.py off of urllib2
+        https://bugs.webkit.org/show_bug.cgi?id=32729
+
+        * Scripts/modules/bugzilla.py: use mechanize for all url fetching.
+
 2009-12-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Rubber-stamped by Xan Lopez.
